--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html {
+  scroll-behavior: smooth;
+}
 
 .no-scrollbar::-webkit-scrollbar {
   display: none;
